# codex

./: .gitignore  INSTALL.md  LICENSE  PI_Improvements.md  README.md  TODO.md  cabal.config  codex.cabal  devel.cfg  package.yaml  pythondo.cabal  stack.yaml
SafeExec/: Makefile  safeexec.c  safeexec.new.c
SafeExec/tests/: fork.c  mle.c  ole.c  return.c  tle.c  wtle.c
doc/: Makefile  USER-GUIDE.html  USER-GUIDE.md  USER-GUIDE.md~  example-page-1.md  styles.html
firejail/: default.profile  haskell.profile  java.profile
log/: README.md
old-src/: Printout.hs  Report.hs
problems/: problem1.html  problem1.py  problem1.tst  problem1.xml  problem2.html  problem2.py  problem2.tst  problem2.xml
public/recurso1718/: P3.md
python/: pytest.py  runtests.py  turtle.py
scripts/: addtimer.py  process.tcl
snaplets/heist/templates/: _admin.tpl  _answers.tpl  _badrequest.tpl  _base.tpl  _browse.tpl  _changelang.tpl  _choices.tpl  _editor.tpl  _exercise.tpl  _file-edit.tpl  _file_edit.tpl  _file_list.tpl  _fillin.tpl  _fontsize.tpl  _footer.tpl  _forbidden.tpl  _icon_admin.tpl  _icon_back.tpl  _icon_home.tpl  _index.tpl  _internalerror.tpl  _login.tpl  _notfound.tpl  _page.tpl  _quiz.tpl  _register.tpl  _report.tpl  _submission-admin.tpl  _submission-list.tpl  _submission.tpl  _submission_admin.tpl  _submission_list.tpl  _timing.tpl  _unauthorized.tpl  _user_exists.tpl  _warnings.tpl  admin.tpl  base.tpl  editfile.tpl  editproblem.tpl  (+18 more)
snaplets/sqlite-simple/: devel.cfg
sql/: README  eval-edit  eval-schema  eval-select  utils.py
src/: AceEditor.hs  Admin.hs  AdminHandlers.hs  Application.hs  AuthHandlers.hs  Config.hs  Db.hs  Exam.hs  FromMeta.hs  Interval.hs  Language.hs  LdapAuth.hs  LogIO.hs  Main.hs  Markdown.hs  Page.hs  ParseMeta.hs  Printout.hs  Problem.hs  Query.hs  Report.hs  RunTester.hs  SafeExec.hs  Site.hs  Submission.hs  SubmitSummary.hs  Summary.hs  Tester.hs  Types.hs  Utils.hs  XHTML.hs
src/Codex/: AceEditor.hs  AdminHandlers.hs  Application.hs  AuthHandlers.hs  Config.hs  Db.hs  Evaluate.hs  Handlers.hs  Interval.hs  Language.hs  LdapAuth.hs  Markdown.hs  Page.hs  Policy.hs  Printout.hs  Pythontutor.hs  Quiz.hs  Random.hs  SafeExec.hs  Site.hs  Submission.hs  Tasks.hs  Tester.hs  Testers.hs  Time.hs  Translate.hs  Types.hs  Utils.hs
src/Codex/Handlers/: Code.hs  Markdown.hs  Quiz.hs
src/Codex/Handlers/Quiz/: Random.hs
src/Codex/Language/: C.hs  Haskell.hs  Python.hs  QuickCheck.hs
src/Codex/Quiz/: Random.hs
src/Codex/Submission/: Types.hs
src/Codex/Tester/: C.hs  ClangQC.hs  Haskell.hs  HaskellQC.hs  HaskellREPL.hs  Hspec.hs  InputOutput.hs  Limits.hs  Monad.hs  Prolog.hs  PrologREPL.hs  Python.hs  PythonDoctest.hs  PythonREPL.hs  QuickCheck.hs  Quiz.hs  Result.hs  Sql.hs  SqlEdit.hs  SqlSchema.hs  SqlSelect.hs  Sqlite.hs  Utils.hs
src/Language/: C.hs  Haskell.hs  Python.hs  QuickCheck.hs  Types.hs
src/Test/QuickCheck/: C.hs
static/: screen.css
static/js/: ace-glue.js  ace-start.js  changelang.js  tabview.js  timer.js
