Name:                codex
Version:             0.9
Synopsis:            A web server for programming exercises
Description:         A web server for programming exercises
License:             MIT
Author:              Pedro Vasconcelos
Maintainer:          pbv@dcc.fc.up.pt
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development mode
  Default: False
    
Executable codex-server
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  other-modules:
    Codex.AceEditor
    Codex.AdminHandlers
    Codex.Application
    Codex.AuthHandlers
    Codex.Config
    Codex.Db
    Codex.Interval
    Codex.Tester
    Codex.Tester.Monad
    Codex.Tester.Limits
    Codex.Tester.Result
    Codex.Tester.Utils
    Codex.Tester.Python
    Codex.Tester.Haskell                
    Codex.Tester.C
    Codex.Tester.InputOutput
    Codex.Evaluate
    Codex.LdapAuth
    Codex.Page
    Codex.Site
    Codex.Submission
    Codex.Types
    Codex.Utils
    Codex.Printout            
  build-depends:
    filepath,
    directory,
    old-locale,
    process,
    unix,
    transformers,
    bytestring,
    utf8-string,
    heist,
    map-syntax,
    lifted-base,                
    monad-control,
    mtl,
    network-uri,
    snap,
    snap-core,
    snap-server,
    snap-loader-static,
    snap-web-routes,
    web-routes,
    snaplet-sqlite-simple,
    sqlite-simple,
    text,
    time,
    xmlhtml,
    blaze-builder,
    ldap-client,
    pandoc-types,
    pandoc,
    aeson,
    unordered-containers,
    containers,
    configurator,
    base,
    lens,
    process-extras,
    temporary

  if flag(development)
    -- build-depends:
    --  snap-loader-dynamic
    -- cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -fdefer-type-errors -threaded -rtsopts
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts


--  ghc-options: -optl-fuse-ld=gold
--  ld-options:  -fuse-ld=gold

