Name:                codex
Version:             0.9.2
Synopsis:            A web server for programming exercises
Description:         A web server for programming exercises
License:             MIT
Author:              Pedro Vasconcelos
Maintainer:          pbv@dcc.fc.up.pt
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development mode
  Default: False
    
Executable codex-server
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  other-modules:
    Paths_codex
    Codex.AceEditor
    Codex.Handlers
    Codex.Handlers.Quiz
    Codex.Handlers.Quiz.Random
    Codex.Handlers.Code                                
    Codex.AdminHandlers
    Codex.Application
    Codex.AuthHandlers
    Codex.Config
    Codex.Db
    Codex.Evaluate
    Codex.Time
    Codex.LdapAuth
    Codex.Page
    Codex.Printout            
    Codex.Site
    Codex.Submission
    Codex.Submission.Types
    Codex.Tasks
    Codex.Tester
    Codex.Tester.ClangQC
    Codex.Tester.HaskellQC
    Codex.Tester.InputOutput
    Codex.Tester.Limits
    Codex.Tester.Monad
    Codex.Tester.PythonDoctest
    Codex.Tester.Sql                
    Codex.Tester.Result
    Codex.Tester.Utils
    Codex.Tester.Quiz            
    Codex.Types
    Codex.Utils
  build-depends:
    filepath,
    directory,
    process,
    unix,
    lifted-base,                
    transformers,
    bytestring,
    utf8-string,
    heist,
    map-syntax,
    monad-control,
    mtl,
    network-uri,
    snap,
    snap-core,
    snap-server,
    snap-loader-static,
    snap-web-routes,
    web-routes,
    snaplet-sqlite-simple,
    sqlite-simple,
    text,
    time,
    xmlhtml,
    blaze-builder,
    ldap-client,
    pandoc-types,
    pandoc,
    aeson,
    unordered-containers,
    hashable,
    containers,
    configurator,
    base,
    lens,
    io-streams,
    async,                                
    temporary,
    Glob,                
    -- process-extras,
    -- glob-posix,
    random
  if flag(development)
    -- build-depends:
    --  snap-loader-dynamic
    -- cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -fdefer-type-errors -threaded -rtsopts
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts 


