Name:                pythondo
Version:             0.7
Synopsis:            A simple web sandbox for the Python programming language
Description:         A simple web sandbox for the Python programming language
License:             AllRightsReserved
Author:              Pedro Vasconcelos
Maintainer:          pbv@dcc.fc.up.pt
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable pythondo
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    filepath                 >= 1.3,
    directory                >= 1.2,
    old-locale               >= 1.0,
    process                  >= 1.0,
    unix                     >= 2.5,
    regex-compat             >= 0.9,
    transformers             >= 0.3,
    bytestring                >= 0.9.1   && < 0.11,
    utf8-string               >= 0.3, 
    heist                     >= 0.13    && < 0.14,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.12,
    snap-core                 >= 0.9,
    snap-server               >= 0.9,
    snap-loader-static        >= 0.9,
    snaplet-sqlite-simple     >= 0.4,
    sqlite-simple             >= 0.4,
    text                      >= 0.11    && < 0.12,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1,
    blaze-builder             >= 0.3,
    LDAP                      >= 0.6,
    pandoc-types              >= 1.1,
    pandoc                    >= 1.1,
    ekg                       >= 0.4,
    aeson                     >= 0.6,
    unordered-containers      >= 0.2,
    containers                >= 0.4,
    configurator              >= 0.2,
    base                      >= 4.4      && < 5,
    lens                      >= 3.7.6    && < 4.2



  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
